--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,24 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Asimovian&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 
 body{
-    background: rgb(239, 210, 255) ; 
+    background: rgb(6, 0, 88) ; 
+}
+ 
+/* Titulos */ 
+h1, h2 {
+    font-family: "Asimovian", sans-serif;
+    color : rgb(255, 255, 255);
+    text-align: center;
+    
+}
+h3{
+        font-family: "Asimovian", sans-serif;
+    color : rgb(255, 255, 255);
 }
 
-h1, h2{
-    font-family: "Asimovian", sans-serif;
+h4{
+    font-family: "Changa", sans-serif;
+    color : rgb(255, 255, 255);
     
 }
 
+/* Parrafos */
 p{
-     font-family: "Caveat", cursive;
+     font-family: "Changa", sans-serif;
+     color : rgb(255, 255, 255);
 }
 
+/* Encabezado */
 header {
     text-align: center;
-    border-bottom: solid 6px rgba(0, 17, 104, 0.579);
-    margin: 60px;          /* Margen del borde hacia afuera */
+    border-bottom: solid 6px rgba(251, 252, 255, 0.579);     /*Borde inferior del encabezado*/
+    margin: 60px;          /* Margen del borde h acia afuera */
     padding: 20px;         /* Margen del borde hacia adentro */
 
+}
+
+/* Foto especíca de perfil */
+#Foto-de-pefil {
+border: solid rgb(255, 253, 253) 5px;             /*Borde y grosor de un borde*/
+border-radius: 10%;                   /*Borde redondeado*/
+}
+
+/* Foto del gato */
+#Gato {
+    border: solid rgb(255, 255, 255) 2px;
+    width: 15%;
+    border-radius: 20%;
+}
+
+article{
+    border: solid rgb(255, 253, 253) 2px;
+    width: 30%;
+    float: left;                   /*Para que los articulos se pongan uno al lado del otro*/
+}
+
+
+/* Lista desordenada */
+li { 
+    color : rgb(255, 255, 255);
+    font-family: "Changa", sans-serif;
+}
+
+
+time{
+    color : rgb(255, 255, 255);
+    font-family: "Changa", sans-serif;
+}
+
+
+footer{
+    color: rgb(255, 255, 255);
+    font-family: "Asimovian", sans-serif;
 }
